# memecli

./: .gitignore  LICENSE  README.md  memecli.cabal
src/: Main.hs
src/MemeCli/: Cli.hs  Img.hs  Text.hs  Types.hs
