name:                memecli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mcbonz/memecli#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin Brunzel
maintainer:          benjamin.brunzel@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable memecli
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , gd
                     , QuickCheck
